--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									
 									<h2><a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Touch%20Attribution%20in%20SQL">Touch Attribution<br />
 									In SQL</a></h2>
-									<p>In this project, we examine examine user touch attribution to determine the most effecting marketing campaigns for CoolTShirts.</p>
+									<p>In this project, we examine examine user touch attribution to determine the most effective marketing campaigns for CoolTShirts.</p>
 								</header>
 								<a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Touch%20Attribution%20in%20SQL" class="image main"><img src="images/CoolTShirts.jpeg" alt="" /></a>
 								<ul class="actions special">
@@ -82,7 +82,7 @@
 											Funnels in SQL</a></h2>
 										</header>
 										<a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Usage%20Funnels%20in%20SQL" class="image fit"><img src="images/WarbyParker.jpeg" alt="" /></a>
-										<p>In this project, we calculate usage funnels for Warby Parker's campaign where potential customers try on differnet pairs of glasses at home before purchasing.</p>
+										<p>In this project, we calculate usage funnels for Warby Parker's campaign where potential customers try on different pairs of glasses at home before purchasing.</p>
 										<ul class="actions special">
 											<li><a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Usage%20Funnels%20in%20SQL" class="button">View Project</a></li>
 										</ul>
