--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									
 									<h2><a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Touch%20Attribution%20in%20SQL">Touch Attribution<br />
 									In SQL</a></h2>
-									<p>In this project, we examine examine user touch attribution to determine the most effective marketing campaigns for CoolTShirts.</p>
+									<p>In this project, we examine user touch attribution to determine the most effective marketing campaigns for CoolTShirts.</p>
 								</header>
 								<a href="https://github.com/wfoster17/Portfolio-Projects/blob/main/Touch%20Attribution%20in%20SQL" class="image main"><img src="images/CoolTShirts.jpeg" alt="" /></a>
 								<ul class="actions special">
